# HIVE

./: .gitignore  AGENTS.md  ARCHITECTURE.md  GUI.py  PX_SCALE.py  README.md  READMEv2_WIP.md  agents.py  arena.py  board.py  cl_interface.py  drawing.py  dummy.py  gui_pieces.py  heuristic.py  minimax.py  networks.py  pieces.py  play.py  random_agent.py  requirements_claude.txt  requirements_qwen.txt  rl_helper.py  self_play_train.py  system.md
AI/: agents.py
AI/DQL/: rl_helper.py  self_play_train.py
AI/minimax/: minimax.py
GUI/: GUI.py  __init__.py  drawing.py  gui_pieces.py
cpp/: .clang-tidy  ARCHITECTURE.md  CMakeLists.txt  Controller.cpp  Controller.h  Experimentation.cpp  Experimentation.h  Game.cpp  Game.h  MoveFetcher.cpp  MoveFetcher.h  Pieces.h  Position.h  README.md  Structure.md  View.h  bindings.cpp  example.cpp
cpp/.cache/clangd/index/: Controller.cpp.1A4D2B29BABB13B4.idx  Controller.h.1533377A713BBE6A.idx  Experimentation.cpp.D2E089A733A9CE1B.idx  Experimentation.h.3E2C134F12A664A2.idx  Game.cpp.955064AE318B7F5A.idx  Game.h.6392F8EC49E01DDD.idx  MoveFetcher.cpp.F5E225960071D339.idx  MoveFetcher.h.2C359354E1FF5D81.idx  Pieces.h.A6A6292999DD3521.idx  Position.h.5E868519BAC59FCD.idx  example.cpp.5BA6E04509050D29.idx
game/: __init__.py  board.py  pieces.py
py/: ARCHITECTURE.md  CLAUDE.md  arena.py  play.py
py/AI/: CLAUDE.md  agents.py
py/AI/DQL/: __init__.py  networks.py  rl_helper.py  self_play_train.py  self_play_train_vs_random.py
py/AI/minimax/: __init__.py  heuristic.py
py/GUI/: GUI.py  PX_SCALE.py
py/game/: ACTIONSPACE.py  board.py
py/scripts/: delete_models.py
py2/: ARCHITECTURE.md  config.json  main.py
py2/agents/: __init__.py  base.py  minimax_agent.py  minimax_agent_py.py  random_agent.py
py2/controller/: game_controller.py
py2/gui/: board_canvas.py  drawing.py  gui_pieces.py  main_window.py  px_scale.py  selection_canvas.py  side_panel.py
tools/: download_games.sh
